Prevent text wrapping on message timestamps

--- a/play.css
+++ b/play.css
@@ -1097,6 +1097,10 @@ body.fullBg #background {
   vertical-align: top;
 }
 
+.messageTimestamp {
+  white-space: nowrap;
+}
+
 .message, .toastMessage {
   word-break: break-word;
   image-rendering: auto;
